hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/ttuple.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function f(~(int, int) $s): (int, int) {
  return $s; // error
}
